--- a/index.html
+++ b/index.html
@@ -46,26 +46,22 @@
 <div id="main_content_wrap" class="outer">
   <section id="main_content" class="inner main-inner" ng-app="wizard-sample" ng-controller="WizardCtrl">
     <wizard on-finish="finished()">
-      <wz-step title="Начало">
+      <wz-step title="(1)">
         <p>Hey guys, welcome to the wizard :)</p>
-
-        <span><input type="text" ng-model="pass.pass1"> <input type="submit" ng-click="pass1()" value="Next"/></span>
-        <img src="images/alisa-v-strane-chudes-alisa-v.jpg">
-
-
+        <span><input type="text" ng-model="pass.pass1"> <input type="submit" ng-click="pass1()" value="Проверить"/></span>
+        <img src="images/q1.jpg">
       </wz-step>
-      <wz-step title="Liking it">
-        <h1>Liking it</h1>
+      <wz-step title="(2)">
         <p>You're now in the second step of this wizard.</p>
-        <p>Magic things can happen here.</p>
-        <input type="button" wz-next="logStep()" value="Click here to continue" />
+        <span><input type="text" ng-model="pass.pass2"> <input type="submit" ng-click="pass2()" value="Проверить"/></span>
+        <img src="images/q2.jpg">
       </wz-step>
-      <wz-step title="More steps">
-        <h1>More steps</h1>
-        <p>Click on the bottom navigation on Liking it to go back to that step for example</p>
-        <input type="button" wz-next value="Click here to continue" />
+      <wz-step title="(3)">
+        <p>You're now in the second step of this wizard.</p>
+        <span><input type="text" ng-model="pass.pass3"> <input type="submit" ng-click="pass3()" value="Проверить"/></span>
+        <img src="images/q3.png">
       </wz-step>
-      <wz-step title="Even more">
+      <wz-step title="(4)">
         <h1>Even More steps</h1>
         <p>I can't deal with so many steps. ARGH</p>
         <input type="button" wz-next value="Click here to continue" />
