--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header class="inner">
     <!--<a id="forkme_banner" href="https://github.com/mgonto/angular-wizard">View on GitHub</a>-->
 
-    <h1 id="project_title">Квест ""</h1>
+    <h1 id="project_title">"Мосины сережки"</h1>
     <!--<h2 id="project_tagline">Easy to use Wizard library for AngularJS</h2>-->
 
     <!--<section id="downloads">-->
